fixed layer dependencies and fixed image creation

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,6 +12,6 @@ BBFILE_PRIORITY_machinekit-client = "7"
 # cause compatibility issues with other layers
 LAYERVERSION_machinekit-client = "1"
 
-LAYERDEPENDS_skeleton = "core"
+LAYERDEPENDS_machinekit-client = "mb"
 
-LAYERSERIES_COMPAT_skeleton = "rocko"
+LAYERSERIES_COMPAT_machinekit-client = "rocko"
